--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -10,12 +10,12 @@
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
-      <OutputPath>..\bin\Debug/net6.0/</OutputPath>
+      <OutputPath>../bin/Debug/</OutputPath>
       <PlatformTarget>x64</PlatformTarget>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-      <OutputPath>..\bin\Release/net6.0/</OutputPath>
+      <OutputPath>../bin/Release/</OutputPath>
       <PlatformTarget>x64</PlatformTarget>
     </PropertyGroup>
 
@@ -27,7 +27,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Game\Game.csproj" />
+      <ProjectReference Include="..\Poly\Poly.csproj" />
     </ItemGroup>
 
 </Project>
