--- a/Blazor/appsettings.Development.json
+++ b/Blazor/appsettings.Development.json
@@ -1,4 +1,11 @@
 {
+  "Kestrel": {
+    "Endpoints": {
+      "Https": {
+        "Url": "http://10.0.0.2:7777"
+      }
+    }
+  },
   "DetailedErrors": true,
   "Logging": {
     "LogLevel": {
