--- a/Game/Game.csproj
+++ b/Game/Game.csproj
@@ -6,11 +6,11 @@
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
-      <OutputPath>../bin/Debug/</OutputPath>
+      <OutputPath>../bin/Debug</OutputPath>
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-      <OutputPath>../bin/Release/</OutputPath>
+      <OutputPath>../bin/Release</OutputPath>
     </PropertyGroup>
 
     <ItemGroup>
