--- a/BlazorServer/BlazorServer.csproj
+++ b/BlazorServer/BlazorServer.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Blazor\Blazor.csproj" />
     <ProjectReference Include="..\Game\Game.csproj" />
   </ItemGroup>
 
