--- a/.github/workflows/main_adiutant.yml
+++ b/.github/workflows/main_adiutant.yml
@@ -14,7 +14,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: Azure Login
+        uses: azure/login@v1
 
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v1
